Ultimate Update Error Fixes

--- a/Prog3ProjektHotelReservierungsSystem/pom.xml
+++ b/Prog3ProjektHotelReservierungsSystem/pom.xml
@@ -16,6 +16,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.seratch</groupId>
+            <artifactId>java-time-backport</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <!-- Thanks for using https://jar-download.com -->
+
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>17.0.2</version>
